test/negative/503_break_outside_loop.fx
// expect: loop
fun f() { break }
f()
